More time range configs, trajectory_analyze fixes

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -26,9 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
     "import math\n",
-    "import os\n",
     "import sys\n",
     "from pathlib import Path\n",
     "import xarray as xr\n",
@@ -67,12 +65,12 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    \"parcels_configs/tijuana_lin.json\",\n",
+    "#     \"parcels_configs/tijuana_lin.json\",\n",
     "#     \"parcels_configs/tijuana_lin_aggr.json\",\n",
     "#     \"parcels_configs/tijuana_less.json\",\n",
     "#     \"parcels_configs/tijuana_now.json\",\n",
     "#     \"parcels_configs/tijuana_onerep.json\",\n",
-    "#     \"parcels_configs/tijuana_range.json\",\n",
+    "    \"parcels_configs/tijuana_range.json\",\n",
     "]\n",
     "\n",
     "loaded_configs = [load_config(path) for path in configs]\n",
@@ -80,21 +78,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files[0][\"timerng\"]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Animated gif stuff and particle simulation\n",
-    "\n",
-    "runs on each file you give it"
+    "## Animated gif stuff and particle simulation"
    ]
   },
   {
@@ -159,7 +146,39 @@
     "            dt=timedelta(seconds=dt),\n",
     "            recovery={ErrorCode.ErrorOutOfBounds: DeleteParticle},\n",
     "            output_file=data[\"pfile\"]\n",
-    "        )"
+    "        )\n",
+    "        \n",
+    "        \n",
+    "def parse_time_range(time_range, data):\n",
+    "    \"\"\"\n",
+    "    Args:\n",
+    "        time_range (array-like): some array with 2 strings\n",
+    "        data (dict)\n",
+    "    \"\"\"\n",
+    "    if time_range[0] == \"START\":\n",
+    "        t_start = data[\"timerng\"][0]\n",
+    "    else:\n",
+    "        try:\n",
+    "            t_start = int(time_range[0])\n",
+    "        except ValueError:\n",
+    "            t_start = np.datetime64(time_range[0], \"h\")\n",
+    "\n",
+    "    if time_range[1] == \"END\":\n",
+    "        t_end = data[\"timerng\"][1]\n",
+    "    else:\n",
+    "        try:\n",
+    "            t_end = int(time_range[1])\n",
+    "        except ValueError:\n",
+    "            t_end = np.datetime64(time_range[1], \"h\")\n",
+    "            \n",
+    "    if isinstance(t_start, int) and isinstance(t_end, int):\n",
+    "        raise TypeError(\"Must have at least one date in the time range.\")\n",
+    "    if isinstance(t_start, int):\n",
+    "        t_start = t_end - np.timedelta64(t_start, \"h\")\n",
+    "    if isinstance(t_end, int):\n",
+    "        t_end = t_start + np.timedelta64(t_end, \"h\")\n",
+    "        \n",
+    "    return t_start, t_end"
    ]
   },
   {
@@ -175,7 +194,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -183,22 +202,16 @@
     "\n",
     "for f in files:\n",
     "    cfg = f[\"cfg\"]\n",
-    "    cfg[\"spawn_points\"] = np.array(cfg[\"spawn_points\"]) # particle spawns will be randomly chosen between these points\n",
+    "    cfg[\"spawn_points\"] = np.array(cfg[\"spawn_points\"])\n",
     "    \n",
     "    if \"time_range\" not in cfg:\n",
     "        t_start = f[\"timerng_secs\"][0]\n",
     "        t_end = f[\"timerng_secs\"][1]\n",
     "    else:\n",
-    "        if cfg[\"time_range\"][0] == \"START\":\n",
-    "            t_start = f[\"timerng_secs\"][0]\n",
-    "        else:\n",
-    "            t_start = np.datetime64(cfg[\"time_range\"][0])\n",
-    "            t_start = (t_start - f[\"timerng\"][0]) / np.timedelta64(1, \"s\")\n",
-    "        if cfg[\"time_range\"][1] == \"END\":\n",
-    "            t_end = f[\"timerng_secs\"][1]\n",
-    "        else:\n",
-    "            t_end = np.datetime64(cfg[\"time_range\"][1])\n",
-    "            t_end = (t_end - f[\"timerng\"][0]) / np.timedelta64(1, \"s\")\n",
+    "        t_start, t_end = parse_time_range(cfg[\"time_range\"], f)\n",
+    "        t_start = (t_start - f[\"timerng\"][0]) / np.timedelta64(1, \"s\")\n",
+    "        t_end = (t_end - f[\"timerng\"][0]) / np.timedelta64(1, \"s\")\n",
+    "            \n",
     "    if cfg[\"repeat_dt\"] < 0:\n",
     "        repetitions = 1\n",
     "    else:\n",
@@ -249,7 +262,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -264,7 +277,7 @@
     "    else:\n",
     "        print(f\"Num snapshots to save for {f['path']}: {cfg['snap_num'] + 2}\")\n",
     "    if cfg[\"snap_num\"] >= 200:\n",
-    "        raise Exception(\"Too many snapshots.\")\n",
+    "        raise Exception(f\"Too many snapshots ({cfg['snap_num']}).\")\n",
     "    f[\"snap_path\"] = create_path(f\"snapshots/{utils.filename_dict[f['res']]}/{f['name']}\")\n",
     "    print(f\"Path to save snapshots to: {f['snap_path']}\")\n",
     "    # only clear directory if desired or actually saving images\n",
