Fix 6km tijuana time range

--- a/access_thredds_man.ipynb
+++ b/access_thredds_man.ipynb
@@ -93,7 +93,7 @@
     "#     (\"tijuana_river_small\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.6), (-117.19, -117.11))\n",
     "#     (\"tijuana_river_now\", DATA_1KM, get_latest_span(np.timedelta64(300, \"D\")), (32.528, 32.71), (-117.29, -117.11)),\n",
     "#     (\"tijuana_river_now\", DATA_2KM, get_latest_span(np.timedelta64(300, \"D\")), (32.524, 32.75), (-117.32, -117.09)),\n",
-    "#     (\"tijuana_river_now\", DATA_6KM, get_latest_span(np.timedelta64(300, \"D\")), (32.35, 32.80), (-117.33, -116.9))\n",
+    "#     (\"tijuana_river_now\", DATA_6KM, (\"2019-09-28T21:00\", \"2020-07-24T20\"), (32.35, 32.80), (-117.33, -116.9))\n",
     "]"
    ]
   },
@@ -195,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "netcdf_filename = \"current_netcdfs/west_coast_1km_hourly/tijuana_river_now.nc\"\n",
+    "netcdf_filename = \"current_netcdfs/west_coast_6km_hourly/tijuana_river_now.nc\"\n",
     "ds = xr.open_dataset(netcdf_filename)\n",
     "fs = xr_dataset_to_fieldset(ds)\n",
     "ds.close()\n",
