--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -65,7 +65,7 @@
     "from parcels import FieldSet\n",
     "from datetime import timedelta, datetime\n",
     "\n",
-    "from utils import generate_mask, conv_to_dataarray\n",
+    "from utils import generate_mask_invalid, conv_to_dataarray\n",
     "from parcels_utils import get_file_info, xr_dataset_to_fieldset"
    ]
   },
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "invalid = generate_mask(target[\"xrds\"][\"u\"].values)\n",
+    "invalid = generate_mask_invalid(target[\"xrds\"][\"u\"].values)\n",
     "num_invalid = invalid.sum()\n",
     "print(f\"total invalid values on target data: {num_invalid}\")"
    ]
@@ -281,7 +281,7 @@
     "        arr_v[i] = c_v\n",
     "    target_interped_u[invalid_pos_new] = arr_u\n",
     "    target_interped_v[invalid_pos_new] = arr_v\n",
-    "    invalid_interped = generate_mask(target_interped_u)\n",
+    "    invalid_interped = generate_mask_invalid(target_interped_u)\n",
     "    print(f\"total invalid values after interpolation with {f['name']}: {invalid_interped.sum()}\")\n",
     "    print(f\"    values filled: {num_invalid_new - invalid_interped.sum()}\")\n",
     "time_en = time.time()\n",
@@ -366,7 +366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "invalid_filled = generate_mask(filled_u)\n",
+    "invalid_filled = generate_mask_invalid(filled_u)\n",
     "print(f\"total invalid values on filled: {invalid_filled.sum()}\")"
    ]
   },
