--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -212,7 +212,7 @@
     "        t_start = (t_start - f[\"timerng\"][0]) / np.timedelta64(1, \"s\")\n",
     "        t_end = (t_end - f[\"timerng\"][0]) / np.timedelta64(1, \"s\")\n",
     "            \n",
-    "    if cfg[\"repeat_dt\"] < 0:\n",
+    "    if cfg[\"repeat_dt\"] <= 0:\n",
     "        repetitions = 1\n",
     "    else:\n",
     "        repetitions = int((t_end - t_start) / cfg[\"repeat_dt\"])\n",
@@ -237,7 +237,8 @@
     "    f[\"pset\"] = ParticleSet(fieldset=f[\"fs\"], pclass=TimedParticle, lon=p_lons, lat=p_lats, time=time_arr)\n",
     "    save_path = f\"{part_path}/particle_{f['name']}.nc\"\n",
     "    f[\"pfile\"] = f[\"pset\"].ParticleFile(save_path)\n",
-    "    print(f\"Particle trajectories for {f['name']} will be saved to {save_path}\")"
+    "    print(f\"Particle trajectories for {f['name']} will be saved to {save_path}\")\n",
+    "    print(f\"    total particles in simulation: {total}\")"
    ]
   },
   {
