Add normal tijuana configs

--- a/access_thredds_man.ipynb
+++ b/access_thredds_man.ipynb
@@ -88,8 +88,9 @@
    "outputs": [],
    "source": [
     "region_data = [\n",
-    "#     (\"tijuana_river\", DATA_2KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11)),\n",
-    "#     (\"tijuana_river\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11)),\n",
+    "    (\"tijuana_river\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11)),\n",
+    "    (\"tijuana_river\", DATA_2KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.524, 32.75), (-117.32, -117.09)),\n",
+    "    (\"tijuana_river\", DATA_6KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.35, 32.80), (-117.33, -116.9)),\n",
     "#     (\"tijuana_river_small\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.6), (-117.19, -117.11))\n",
     "#     (\"tijuana_river_now\", DATA_1KM, get_latest_span(np.timedelta64(300, \"D\")), (32.528, 32.71), (-117.29, -117.11)),\n",
     "#     (\"tijuana_river_now\", DATA_2KM, get_latest_span(np.timedelta64(300, \"D\")), (32.524, 32.75), (-117.32, -117.09)),\n",
@@ -171,35 +172,6 @@
     "    print(f\"saved to {save_dir / filename}\")\n",
     "    print(f\"time elapsed: {time_en - time_st}\")\n",
     "print(\"done\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## fieldset testing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from parcels import FieldSet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "netcdf_filename = \"current_netcdfs/west_coast_6km_hourly/tijuana_river_now.nc\"\n",
-    "ds = xr.open_dataset(netcdf_filename)\n",
-    "fs = xr_dataset_to_fieldset(ds)\n",
-    "ds.close()\n",
-    "fs.U.show()"
    ]
   }
  ],
