--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -65,12 +65,13 @@
    "outputs": [],
    "source": [
     "configs = [\n",
+    "    \"parcels_configs/tijuana_interped.json\",\n",
     "#     \"parcels_configs/tijuana_lin.json\",\n",
     "#     \"parcels_configs/tijuana_lin_aggr.json\",\n",
     "#     \"parcels_configs/tijuana_less.json\",\n",
     "#     \"parcels_configs/tijuana_now.json\",\n",
     "#     \"parcels_configs/tijuana_onerep.json\",\n",
-    "    \"parcels_configs/tijuana_range.json\",\n",
+    "#     \"parcels_configs/tijuana_range.json\",\n",
     "]\n",
     "\n",
     "loaded_configs = [load_config(path) for path in configs]\n",
