--- a/matlab_playground.ipynb
+++ b/matlab_playground.ipynb
@@ -74,7 +74,9 @@
    "source": [
     "coast_mat = scipy.io.loadmat(\"mat/coastline.mat\")\n",
     "coast1km_mat = scipy.io.loadmat(\"mat/coastline_1km.mat\")\n",
-    "pts_mat = scipy.io.loadmat(\"mat/pts_20200810_1530.mat\")"
+    "pts_mat = scipy.io.loadmat(\"mat/pts_20200810_1530.mat\")\n",
+    "tjrprf_mat = scipy.io.loadmat(\"mat/tjrprf_20200810_1530.mat\")\n",
+    "grid_mat = scipy.io.loadmat(\"mat/codartotalGrid.mat\")"
    ]
   },
   {
