Progress with matlab plume tracker simulations

--- a/access_thredds_man.ipynb
+++ b/access_thredds_man.ipynb
@@ -31,7 +31,7 @@
     "import numpy as np\n",
     "import xarray as xr\n",
     "\n",
-    "from utils import create_path\n",
+    "from utils import create_path, expand_coord_rng\n",
     "from parcels_utils import xr_dataset_to_fieldset"
    ]
   },
@@ -53,14 +53,40 @@
     "    DATA_6KM: \"west_coast_6km_hourly\",\n",
     "    DATA_2KM: \"west_coast_2km_hourly\",\n",
     "    DATA_1KM: \"west_coast_1km_hourly\"\n",
-    "}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_chunks = 50\n",
     "\n",
+    "thredds_data = {\n",
+    "    DATA_6KM: xr.open_dataset(dataset_url_6kmhourly, chunks={\"time\": num_chunks}),\n",
+    "    DATA_2KM: xr.open_dataset(dataset_url_2kmhourly, chunks={\"time\": num_chunks}),\n",
+    "    DATA_1KM: xr.open_dataset(dataset_url_1kmhourly, chunks={\"time\": num_chunks})\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_region(data):\n",
     "    time_range = data[2]\n",
     "    if isinstance(time_range[0], str):\n",
     "        time_range = (np.datetime64(time_range[0]), np.datetime64(time_range[1]))\n",
-    "    lat_range = data[3]\n",
-    "    lon_range = data[4]\n",
+    "    if data[5]:\n",
+    "        lat_range = expand_coord_rng(data[3], thredds_data[data[1]][\"lat\"].values)\n",
+    "        lon_range = expand_coord_rng(data[4], thredds_data[data[1]][\"lon\"].values)\n",
+    "    else:\n",
+    "        lat_range = data[3]\n",
+    "        lon_range = data[4]\n",
     "    return dict(\n",
     "        name = data[0],\n",
     "        category = data[1],\n",
@@ -88,13 +114,16 @@
    "outputs": [],
    "source": [
     "region_data = [\n",
-    "    (\"tijuana_river\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11)),\n",
-    "    (\"tijuana_river\", DATA_2KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.524, 32.75), (-117.32, -117.09)),\n",
-    "    (\"tijuana_river\", DATA_6KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.35, 32.80), (-117.33, -116.9)),\n",
-    "#     (\"tijuana_river_small\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.6), (-117.19, -117.11))\n",
-    "#     (\"tijuana_river_now\", DATA_1KM, get_latest_span(np.timedelta64(300, \"D\")), (32.528, 32.71), (-117.29, -117.11)),\n",
-    "#     (\"tijuana_river_now\", DATA_2KM, get_latest_span(np.timedelta64(300, \"D\")), (32.524, 32.75), (-117.32, -117.09)),\n",
-    "#     (\"tijuana_river_now\", DATA_6KM, (\"2019-09-28T21:00\", \"2020-07-24T20\"), (32.35, 32.80), (-117.33, -116.9))\n",
+    "    (\"tj_plume\", DATA_1KM, (\"2020-08-10T00\", \"2020-08-11T00\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
+    "    (\"tj_plume\", DATA_2KM, (\"2020-08-10T00\", \"2020-08-11T00\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
+    "    (\"tj_plume\", DATA_6KM, (\"2020-08-10T00\", \"2020-08-11T00\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
+    "#     (\"tijuana_river\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11), False),\n",
+    "#     (\"tijuana_river\", DATA_2KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.524, 32.75), (-117.32, -117.09), False),\n",
+    "#     (\"tijuana_river\", DATA_6KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
+    "#     (\"tijuana_river_small\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.6), (-117.19, -117.11), False)\n",
+    "#     (\"tijuana_river_now\", DATA_1KM, get_latest_span(np.timedelta64(300, \"D\")), (32.528, 32.71), (-117.29, -117.11), False),\n",
+    "#     (\"tijuana_river_now\", DATA_2KM, get_latest_span(np.timedelta64(300, \"D\")), (32.524, 32.75), (-117.32, -117.09), False),\n",
+    "#     (\"tijuana_river_now\", DATA_6KM, (\"2019-09-28T21:00\", \"2020-07-24T20\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
     "]"
    ]
   },
@@ -107,35 +136,6 @@
     "oh my god its even slower now what the fuck\n",
     "\n",
     "10 minutes for a 12 megabyte download are you serious"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_chunks = 50\n",
-    "\n",
-    "# thredds_data = {\n",
-    "#     DATA_6KM: xr.open_dataset(dataset_url_6kmhourly, chunks={\"time\": num_chunks}),\n",
-    "#     DATA_2KM: xr.open_dataset(dataset_url_2kmhourly, chunks={\"time\": num_chunks}),\n",
-    "#     DATA_1KM: xr.open_dataset(dataset_url_1kmhourly, chunks={\"time\": num_chunks})\n",
-    "# }\n",
-    "\n",
-    "thredds_data = {}\n",
-    "\n",
-    "# lol\n",
-    "# so it doesnt have to slowly load every dataset very slowly if not needed\n",
-    "for rd in region_data:\n",
-    "    res = rd[1]\n",
-    "    if res not in thredds_data:\n",
-    "        if res == DATA_6KM:\n",
-    "            thredds_data[DATA_6KM] = xr.open_dataset(dataset_url_6kmhourly, chunks={\"time\": num_chunks})\n",
-    "        if res == DATA_2KM:\n",
-    "            thredds_data[DATA_2KM] = xr.open_dataset(dataset_url_2kmhourly, chunks={\"time\": num_chunks})\n",
-    "        if res == DATA_1KM:\n",
-    "            thredds_data[DATA_1KM] = xr.open_dataset(dataset_url_1kmhourly, chunks={\"time\": num_chunks})"
    ]
   },
   {
