--- a/matlab_playground.ipynb
+++ b/matlab_playground.ipynb
@@ -24,7 +24,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.io\n",
+    "import xarray as xr\n",
     "\n",
+    "import utils\n",
     "from plot_utils import get_carree_axis"
    ]
   },
@@ -36,6 +38,8 @@
    },
    "outputs": [],
    "source": [
+    "dataset_url_1kmhourly = \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/1km/hourly/RTV/HFRADAR_US_West_Coast_1km_Resolution_Hourly_RTV_best.ncd\"\n",
+    "\n",
     "TIJUANA_RIVER_DOMAIN = dict(\n",
     "    S=32.528,\n",
     "    N=32.71,\n",
@@ -77,6 +81,62 @@
     "pts_mat = scipy.io.loadmat(\"mat/pts_20200810_1530.mat\")\n",
     "tjrprf_mat = scipy.io.loadmat(\"mat/tjrprf_20200810_1530.mat\")\n",
     "grid_mat = scipy.io.loadmat(\"mat/codartotalGrid.mat\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pts_mat[\"xf\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lon = grid_mat[\"totalGrid\"][:, 0].min(), grid_mat[\"totalGrid\"][:, 0].max()\n",
+    "lon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lat = grid_mat[\"totalGrid\"][:, 1].min(), grid_mat[\"totalGrid\"][:, 1].max()\n",
+    "lat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xrds = xr.open_dataset(dataset_url_1kmhourly)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.expand_coord_rng(lat, xrds[\"lat\"].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.expand_coord_rng(lon, xrds[\"lon\"].values)"
    ]
   },
   {
