--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -26,14 +26,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from datetime import timedelta\n",
     "import math\n",
     "import sys\n",
     "from pathlib import Path\n",
-    "import xarray as xr\n",
-    "import numpy as np\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "from parcels import FieldSet, ParticleSet\n",
-    "from datetime import timedelta\n",
+    "import scipy.io\n",
+    "import xarray as xr\n",
     "\n",
     "import utils\n",
     "from utils import load_config, create_path, add_noise\n",
@@ -65,7 +67,8 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    \"parcels_configs/tijuana_interped.json\",\n",
+    "    \"parcels_configs/plume_track.json\"\n",
+    "#     \"parcels_configs/tijuana_interped.json\",\n",
     "#     \"parcels_configs/tijuana_lin.json\",\n",
     "#     \"parcels_configs/tijuana_lin_aggr.json\",\n",
     "#     \"parcels_configs/tijuana_less.json\",\n",
@@ -129,13 +132,13 @@
     "    if save_snapshot:\n",
     "        days = (data[\"timerng\"][1] - data[\"timerng\"][0]) / np.timedelta64(1, 'D')\n",
     "        field = None if ages else \"vector\"\n",
-    "        if \"shown_domain\" in data[\"cfg\"]:\n",
+    "        if data[\"cfg\"][\"shown_domain\"] is not None:\n",
     "            dom = data[\"cfg\"][\"shown_domain\"]\n",
     "        else:\n",
     "            dom = data[\"domain\"]\n",
     "        plot_particles_age(data[\"pset\"], dom, field=field,\n",
-    "                           savefile=str(data[\"snap_path\"])+\"/particles\"+str(i).zfill(zpad),\n",
-    "                           vmax=days, field_vmax=max_v)\n",
+    "                           savefile=str(data[\"snap_path\"])+\"/particles\"+str(i).zfill(zpad)+\".png\",\n",
+    "                           vmax=days, field_vmax=max_v, part_size=1)\n",
     "    \n",
     "    if exec_pset:\n",
     "        # temporary - TODO make it only init once\n",
@@ -162,7 +165,7 @@
     "        try:\n",
     "            t_start = int(time_range[0])\n",
     "        except ValueError:\n",
-    "            t_start = np.datetime64(time_range[0], \"h\")\n",
+    "            t_start = np.datetime64(time_range[0])\n",
     "\n",
     "    if time_range[1] == \"END\":\n",
     "        t_end = data[\"timerng\"][1]\n",
@@ -170,14 +173,14 @@
     "        try:\n",
     "            t_end = int(time_range[1])\n",
     "        except ValueError:\n",
-    "            t_end = np.datetime64(time_range[1], \"h\")\n",
+    "            t_end = np.datetime64(time_range[1])\n",
     "            \n",
     "    if isinstance(t_start, int) and isinstance(t_end, int):\n",
     "        raise TypeError(\"Must have at least one date in the time range.\")\n",
     "    if isinstance(t_start, int):\n",
-    "        t_start = t_end - np.timedelta64(t_start, \"h\")\n",
+    "        t_start = t_end - np.timedelta64(t_start)\n",
     "    if isinstance(t_end, int):\n",
-    "        t_end = t_start + np.timedelta64(t_end, \"h\")\n",
+    "        t_end = t_start + np.timedelta64(t_end)\n",
     "        \n",
     "    return t_start, t_end"
    ]
@@ -203,15 +206,29 @@
     "\n",
     "for f in files:\n",
     "    cfg = f[\"cfg\"]\n",
-    "    cfg[\"spawn_points\"] = np.array(cfg[\"spawn_points\"])\n",
-    "    \n",
-    "    if \"time_range\" not in cfg:\n",
-    "        t_start = f[\"timerng_secs\"][0]\n",
-    "        t_end = f[\"timerng_secs\"][1]\n",
+    "    # data is from .mat file\n",
+    "    if isinstance(cfg[\"spawn_points\"], str):\n",
+    "        # parse .mat file\n",
+    "        mat_data = scipy.io.loadmat(cfg[\"spawn_points\"])\n",
+    "        xf = mat_data[\"xf\"]\n",
+    "        yf = mat_data[\"yf\"]\n",
+    "        # filter out nan values\n",
+    "        xf = xf[np.where(~np.isnan(xf))].flatten()\n",
+    "        yf = yf[np.where(~np.isnan(yf))].flatten()\n",
+    "        assert len(xf) == len(yf)\n",
+    "        spawns = np.empty((2, len(xf)))\n",
+    "        # spawns are read as (lat, lon), so reverse order\n",
+    "        spawns[0] = yf\n",
+    "        spawns[1] = xf\n",
+    "        cfg[\"spawn_points\"] = spawns.T\n",
     "    else:\n",
-    "        t_start, t_end = parse_time_range(cfg[\"time_range\"], f)\n",
-    "        t_start = (t_start - f[\"timerng\"][0]) / np.timedelta64(1, \"s\")\n",
-    "        t_end = (t_end - f[\"timerng\"][0]) / np.timedelta64(1, \"s\")\n",
+    "        cfg[\"spawn_points\"] = np.array(cfg[\"spawn_points\"])\n",
+    "    \n",
+    "    # parse time information\n",
+    "    t_start, t_end = parse_time_range(cfg[\"time_range\"], f)\n",
+    "    # convert to seconds relative to fieldset delta\n",
+    "    t_start = (t_start - f[\"timerng\"][0]) / np.timedelta64(1, \"s\")\n",
+    "    t_end = (t_end - f[\"timerng\"][0]) / np.timedelta64(1, \"s\")\n",
     "            \n",
     "    if cfg[\"repeat_dt\"] <= 0:\n",
     "        repetitions = 1\n",
@@ -220,19 +237,37 @@
     "    cfg[\"sim_start_sec\"] = t_start\n",
     "    cfg[\"sim_end_sec\"] = t_end\n",
     "    # the total number of particles that will exist in the simulation\n",
-    "    total = repetitions * cfg[\"particles_per_dt\"]\n",
-    "    lat_arr = np.zeros(total)\n",
-    "    lon_arr = np.zeros(total)\n",
+    "    if cfg[\"particles_per_dt\"] <= 0:\n",
+    "        cfg[\"particles_per_dt\"] = len(cfg[\"spawn_points\"])\n",
+    "        total = repetitions * len(cfg[\"spawn_points\"])\n",
+    "    else:\n",
+    "        total = repetitions * cfg[\"particles_per_dt\"]\n",
+    "\n",
+    "    # prep when each particle is released\n",
     "    time_arr = np.zeros(total)\n",
     "    for i in range(repetitions):\n",
+    "        # should be fine if repeat_dt is negative since it will be multiplied by 0\n",
+    "        # when that's the case\n",
     "        time_arr[cfg[\"particles_per_dt\"] * i:cfg[\"particles_per_dt\"] * (i + 1)] = t_start + cfg[\"repeat_dt\"] * i\n",
     "\n",
-    "    # randomly select spawn points from the given config\n",
-    "    sp_lat = cfg[\"spawn_points\"].T[0][np.random.randint(0, len(cfg[\"spawn_points\"]), total)]\n",
-    "    sp_lon = cfg[\"spawn_points\"].T[1][np.random.randint(0, len(cfg[\"spawn_points\"]), total)]\n",
-    "    # vary spawn locations using max_variation\n",
-    "    p_lats = add_noise(sp_lat, cfg[\"max_variation\"])\n",
-    "    p_lons = add_noise(sp_lon, cfg[\"max_variation\"])\n",
+    "    # select spawn points from the given config\n",
+    "    if cfg[\"random_spawn\"]:\n",
+    "        # randomly choose spawn points and random vairation\n",
+    "        sp_lat = cfg[\"spawn_points\"].T[0][np.random.randint(0, len(cfg[\"spawn_points\"]), total)]\n",
+    "        sp_lon = cfg[\"spawn_points\"].T[1][np.random.randint(0, len(cfg[\"spawn_points\"]), total)]\n",
+    "        # vary spawn locations using max_variation\n",
+    "        p_lats = add_noise(sp_lat, cfg[\"max_variation\"])\n",
+    "        p_lons = add_noise(sp_lon, cfg[\"max_variation\"])\n",
+    "    else:\n",
+    "        # cycle through each spawn point in order\n",
+    "        sp_repeat = int(total / len(cfg[\"spawn_points\"]))\n",
+    "        remainder = total - sp_repeat * len(cfg[\"spawn_points\"])\n",
+    "        p_lats = np.empty(total)\n",
+    "        p_lons = np.empty(total)\n",
+    "        p_lats[:sp_repeat * len(cfg[\"spawn_points\"])] = np.tile(cfg[\"spawn_points\"].T[0], sp_repeat)\n",
+    "        p_lats[sp_repeat * len(cfg[\"spawn_points\"]):] = cfg[\"spawn_points\"].T[0][:remainder]\n",
+    "        p_lons[:sp_repeat * len(cfg[\"spawn_points\"])] = np.tile(cfg[\"spawn_points\"].T[1], sp_repeat)\n",
+    "        p_lons[sp_repeat * len(cfg[\"spawn_points\"]):] = cfg[\"spawn_points\"].T[1][:remainder]\n",
     "\n",
     "    # set up ParticleSet and ParticleFile\n",
     "    f[\"pset\"] = ParticleSet(fieldset=f[\"fs\"], pclass=TimedParticle, lon=p_lons, lat=p_lats, time=time_arr)\n",
