--- a/plum_tracker_comp.ipynb
+++ b/plum_tracker_comp.ipynb
@@ -30,6 +30,7 @@
     "import matplotlib.pyplot as plt\n",
     "import scipy.io\n",
     "\n",
+    "from utils import create_gif\n",
     "from plot_utils import get_carree_axis, plot_particles"
    ]
   },
@@ -50,7 +51,13 @@
     "    N=32.5825,\n",
     "    W=-117.162,\n",
     "    E=-117.105,\n",
-    ")"
+    ")\n",
+    "THING_DOMAIN = {\n",
+    "    \"S\": 32.41,\n",
+    "    \"N\": 32.7,\n",
+    "    \"W\": -117.25,\n",
+    "    \"E\": -117\n",
+    "}"
    ]
   },
   {
@@ -67,16 +74,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "for i in range(start, 2400, incr):\n",
     "    name = f\"mat/{file_prefix}{str(i).zfill(4)}.mat\"\n",
     "    try:\n",
     "        data = scipy.io.loadmat(name)\n",
-    "        plot_particles(data[\"yf\"], data[\"xf\"], None, CLOSE_TIJUANA_DOMAIN)\n",
+    "        plot_particles(\n",
+    "            data[\"yf\"], data[\"xf\"], None, THING_DOMAIN,\n",
+    "            show=False, savefile=f\"mat/snap/s{str(i).zfill(4)}.png\", part_size=1,\n",
+    "            titlestr=f\"particles at {i}\"\n",
+    "        )\n",
     "    except FileNotFoundError:\n",
     "        print(f\"file {name} not found\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_gif(25, \"mat/snap/s*.png\", \"mat/g.gif\")"
    ]
   }
  ],
